--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,10 +1,13 @@
 {
     "compilerOptions": {
-        "target": "es2015",
-        "module": "es2015"
+        "target": "es6",
+        "module": "commonjs"
     },
     "exclude": [
         "node_modules",
+        ".vscode",
+        "dist",
+        "build",
         "library",
         "local",
         "settings",
