--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,15 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "lib": [ "dom", "es5", "es2015.promise" ],
+    "lib": [ "dom", "es5", "es2015.promise", "es2015.iterable", "es2015.collection" ],
     "target": "es5",
     "experimentalDecorators": true,
     "skipLibCheck": true
   },
   "exclude": [
     "node_modules",
+    ".vscode",
+    "dist",
     "library",
     "local",
     "temp",
